objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>TEST1</fullName>
        <description>RT Test1</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>TEST2</fullName>
        <description>RT Test2</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Has_Extended_Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Extended Warranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Purchase_Date__c</fullName>
        <label>Product Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Total_Warranty_Days__c</fullName>
        <label>Product Total Warranty Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_Summary__c</fullName>
        <label>Warranty_Summary</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Service_Case_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Service Case</label>
        <queue>Service_Case</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>